--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>nz.ac.auckland.lmz</groupId>
 	<artifactId>lmz-controlpanel-auth</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>jar</packaging>
 	<name>lmz-controlpanel-auth</name>
 	<dependencies>
@@ -49,4 +49,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>lmz-controlpanel-auth-1.1</tag>
+  </scm>
 </project>
