--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>nz.ac.auckland.lmz</groupId>
 	<artifactId>lmz-controlpanel-auth</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>lmz-controlpanel-auth</name>
 	<dependencies>
@@ -49,8 +49,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>lmz-controlpanel-auth-1.1</tag>
-  </scm>
 </project>
